[package]
name = "rstvnamer"
version = "0.1.0"
authors = ["dbr"]

[dependencies]
tvdb = "0.4.0"
regex = "0.2.2"
symlink = "0.1.0"
clap = "2.26.2"
log = "0.3"
env_logger = "0.4.3"
failure = "0.1.0"
failure_derive = "0.1.0"

[lib]
name = "rstvnamer"
path = "src/lib.rs"

[[bin]]
name = "tvnamer"
doc = false
path = "src/main.rs"
