[package]
name = "rstvnamer"
version = "0.1.0"
authors = ["dbr"]

[dependencies]
#tvdb = { path = "../tvdb-rs" }
tvdb = "0.5.0"
regex = "0.2.6"
symlink = "0.1.0"
clap = "2.30.0"
log = "0.4.1"
env_logger = "0.5.4"
failure = "0.1.1"
failure_derive = "0.1.1"

[lib]
name = "rstvnamer"
path = "src/lib.rs"

[[bin]]
name = "tvnamer"
doc = false
path = "src/main.rs"
